contact us ready

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Base Reality</title>
+
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=e0908983-f78d-42b6-b3eb-fca2a5202813&lang=en_US"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
